# HandTrackingProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  main.cpp  phone_demo.py
cpp_app/: CMakeLists.txt  main.cpp  main_imgui.cpp
python_app/stream_processing/: sharedmem_stream_processing_app.py  webcam_app.py
python_app/transformations/: mp_hand_detection.py
stream_processing/: queue_stream_processing_app.py  sharedmem_stream_processing_app.py  stream_processing_app.py  sync_stream_processing_app.py  webcam_app.py
transformations/: image_transform.py  mp_hand_detection.py  toy_transformations.py
