cmake_minimum_required(VERSION 3.10)  # Minimum CMake version required
project(HandTrackingProject)                 # Name of the project
set(CMAKE_CXX_STANDARD 14)            # C++ standard to use
add_executable(main main.cpp)         # Define an executable target named 'main' to be built from 'main.cpp'